@@ -29,6 +29,7 @@ The following bugs were resolved with this release:
   [32882] tst-audit10 fails with SIGILL on CPUs without AVX
   [32897] dynamic-link: pthread_getattr_np fails when executable stack
     tunable is set
+  [32987] elf: Fix subprocess status handling for tst-dlopen-sgid
 
 Version 2.41
 
